# TrajHW

./: readme.md
astar_path_planner/: CMakeLists.txt  package.xml
astar_path_planner/include/astar_path_planner/: astar_planner.h
astar_path_planner/launch/: astar_planner.launch
astar_path_planner/rviz/: astar_path_planner.rviz
astar_path_planner/src/: astar_planner.cpp
minco_package/: CMakeLists.txt  package.xml  readme.md
minco_package/include/: back_end_optimizer.h  poly_traj_utils.hpp
minco_package/src/: back_end_optimizer.cpp  example.cpp
